# langchain

./: .gitignore  pyproject.toml  requirements.txt
faiss_index_react/: index.faiss  index.pkl
langchain-course/: icebreaker.py
langchain-course/ice_breaker/: __init__.py  app.py  hello.py  icebreaker.py  output_parsers.py  pyproject.toml  requirements.txt
langchain-course/ice_breaker/agents/: linkedin_lookup_agent.py  twitter_lookup_agent.py
langchain-course/ice_breaker/templates/: index.html
langchain-course/ice_breaker/third_parties/: linkedn.py  twitter.py
langchain-course/ice_breaker/tool/: __init__.py  tools.py
langchain-course/intro-to-vector-dbs/: chatpdf.py  ingestion.py  main.py  mediumblog1.txt  pyproject.toml
langchain-course/intro-to-vector-dbs/faiss_index_react/: index.pkl
langchain-course/react-langchain/: callback.py  main.py  pyproject.toml
